Fix some responsive layout issues in the Upload dialog

--- a/media/com_jce/editor/css/src/dialog.css
+++ b/media/com_jce/editor/css/src/dialog.css
@@ -451,6 +451,7 @@ span.uk-slider {
     left: 0;
     width: 100%;
     top: 0;
+    display: flex;
 }
 
 .uk-switcher {
